--- a/web-app/index.html
+++ b/web-app/index.html
@@ -38,7 +38,8 @@
   
   <h3 id="five">Animation</h3>
   
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>  
+  <p>This page demostrate how animation works in jQuery. </p>
+  <p>Description: animate() function enables custom animation of a set of CSS properties. Press arrow key to move the image up/down/right/left. We can create many ther effects easily using jQuery such as fadeOut(), fadeIn()..etc. Clicking the image will make the image fade out and then fade in again. Whenever mouse leaves an image, the element will be bounced three times.</p>    
   
   <h3 id="six">fill in title</h3>
   
