--- a/web-app/index.html
+++ b/web-app/index.html
@@ -21,7 +21,7 @@
   <h3 id="one"><a href="selection1.html">Selection Demo</a></h3>
 
   
-  <p>This page demostrate how jQuery selecors work. </p>
+  <p>This page demostrate how jQuery selectors work. </p>
   <p>Description:  addClass() add red class to songs that were green. Cloest() finds the cloest song to where you clicked and change its color to purple. :lt() selector selects the first 4 songs and hide them. .on() allows you to bind multiple events to one selector as you can see from the actions on show button.</p>  
   
   <h3 id="two">Selection demo 2</h3>
