Rearanged file hierarchy

--- a/web-app/animation/animation.html
+++ b/web-app/animation/animation.html
@@ -3,6 +3,7 @@
     <head>
     	<title>Animation Demo</title>
         <link rel='stylesheet' type='text/css' href='animation.css'/>
+        <link rel='stylesheet' type='text/css' href='../style.css'/>
 		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.js"></script>
 		<script type='text/javascript' src='animation.js'></script>
