--- a/web-app/index.html
+++ b/web-app/index.html
@@ -18,7 +18,7 @@
   
   <div class="all-questions">
   
-  <h3 id="one"><a href="selection1.html">Selection Demo</a></h3>
+  <h3 id="one"><a href="selection/selection1.html">Selection Demo</a></h3>
 
   
 
