--- a/web-app/selection/selection1.html
+++ b/web-app/selection/selection1.html
@@ -6,6 +6,7 @@
 
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <link rel="stylesheet" href="selection.css">
+  <link rel='stylesheet' type='text/css' href='../style.css'/>
 </head>
 <body>
 <div class = "center" id = "border">
