Tidy index html

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -1,67 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>jQuery Demo</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
+	<head>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>jQuery Demo</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
 
 
 <body>
 <article>
-  <h1>Documentation</h1>
-  
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>  
-  
-  <div class="all-questions">
-  
-  <h3 id="one"><a href="selection/selection1.html">Selection Demo</a></h3>
-
-  
-
-
-  <p>This page demostrate how jQuery seletors work. </p>
-
-  <p>Description:  addClass() add red class to songs that were green. Cloest() finds the cloest song to where you clicked and change its color to purple. :lt() selector selects the first 4 songs and hide them. .on() allows you to bind multiple events to one selector as you can see from the actions on show button.</p>  
-  
-  <h3 id="two">Selection demo 2</h3>
-  
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>  
-  
-  <h3 id="three">Selection demo 3</h3>
-  
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>  
-  
-  <h3 id="four">Ajax</h3>
-  
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>  
-  
-  <h3 id="five">Animation</h3>
-  
-  <p>This page demostrate how animation works in jQuery. </p>
-  <p>Description: animate() function enables custom animation of a set of CSS properties. Press arrow key to move the image up/down/right/left. We can create many ther effects easily using jQuery such as fadeOut(), fadeIn()..etc. Clicking the image will make the image fade out and then fade in again. Whenever mouse leaves an image, the element will be bounced three times.</p>    
-  
-  <h3 id="six">fill in title</h3>
-  
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>  
-  
-  <h3 id="seven">fill in title</h3>
-  
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>  
-  
-  <h3 id="eight">fill in title</h3>
-  
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>  
-  
-  <h3 id="nine">fill in title</h3>
-  
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p> 
-    
-  </div>
-  
+	<h1>Documentation</h1>
+	
+	<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>	
+	
+	<div class="all-questions">
+	
+		<div>
+			<h3 id="one"><a href="selection/selection1.html">Selection Demo</a></h3>
+			<p>This page demostrate how jQuery seletors work.
+				<a href="selection/selection1.html">Selection Demo</a>
+			</p>
+			<p>Description:	addClass() add red class to songs that were green. Cloest() finds the cloest song to where you clicked and change its color to purple. :lt() selector selects the first 4 songs and hide them. .on() allows you to bind multiple events to one selector as you can see from the actions on show button.</p>	
+		</div>
+		
+		<div>
+			<h3 id="two">Selection demo 2</h3>
+	
+			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>	
+		</div>
+		
+		<div>
+			<h3 id="three">Selection demo 3</h3>
+	
+			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>	
+		</div>
+		
+		<div>
+			<h3 id="four">Ajax</h3>
+	
+			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>	
+		</div>
+		
+		<div>
+			<h3 id="five">Animation</h3>
+	
+			<p>This page demostrate how animation works in jQuery. </p>
+			<p>Description: animate() function enables custom animation of a set of CSS properties. Press arrow key to move the image up/down/right/left. We can create many ther effects easily using jQuery such as fadeOut(), fadeIn()..etc. Clicking the image will make the image fade out and then fade in again. Whenever mouse leaves an image, the element will be bounced three times.</p>		
+		</div>
+		
+		<div>
+			<h3 id="six">fill in title</h3>
+	
+			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>	
+		</div>
+		
+		<div>
+			<h3 id="seven">fill in title</h3>
+	
+			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>	
+		</div>
+		
+		<div>
+			<h3 id="eight">fill in title</h3>
+	
+			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>	
+		</div>
+		
+		<div>
+			<h3 id="nine">fill in title</h3>
+	
+			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p> 
+		</div>
+	</div>
+	
 </article>
 <script src="index.js"></script>
 </body>
