--- a/web-app/index.html
+++ b/web-app/index.html
@@ -29,7 +29,25 @@
 		<div>
 			<h3 id="two">Selection demo 2</h3>
 	
-			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>	
+			<p style="font-size:24pt;color:red">I would add one additional level instead of putting each demo below the root</p>
+			
+			<ul style="font-size:24pt;color:red">
+			<li>/selection/
+				<ul>
+				<li>top.html</li>
+				<li>1.html</li>
+				<li>2.html</li>
+				</ul>
+			</li>
+			<li>/animation/
+				<ul>
+				<li>top.html</li>
+				<li>1.html</li>
+				</ul>
+			</li>
+			</ul>
+			
+			
 		</div>
 		
 		<div>
