updated homepage of app

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -11,16 +11,18 @@
 
 
 <body>
+	<h1 id="jquery_title">JQuery Demo</h1>
+	<h1 id="groupname">Awesome Group</h1>
+	<p id="team"> James Araujo, Jay Svoboda, Lin Cong, Twilight Summerland, Hwayoung Lee, Abram Wiebe</p>
 <article>
-	<h1>Table of Contents</h1>
-	
-	<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>	
-	
-	<div class="all-questions">
-	
+	<h1 id="TOC">Table of Contents</h1>
 
-			
-			
+	<p> Below are some of the highlights of JQuery's capability. </p>
+	<div class="all-questions">
+
+
+
+
 			<ul>
 			<li><h3 id="one"><a href="selection/index.html">Selection</a></h3></li>
 			<li><h3 id="two"><a href="animation/index.html">Animation</a></h3></li>
@@ -29,14 +31,14 @@
 			<li><h3 id="five">fill in title</h3></li>
 			<li><h3 id="six">fill in title</h3></li>
 			</ul>
-				
-			
-			
 
-				
-		
+
+
+
+
+
 	</div>
-	
+
 </article>
 <script src="index.js"></script>
 </body>
