Further improved homepage interactivity

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -16,17 +16,18 @@
 	<p id="team"> James Araujo, Jay Svoboda, Lin Cong, Twilight Summerland, Hwayoung Lee, Abram Wiebe</p>
 <article>
 	<h1 id="TOC">Table of Contents</h1>
-
-	<p> Below are some of the highlights of JQuery's capability. </p>
 	<div class="all-questions">
+		
+	</div>
+	<p> Below are some of the highlights of JQuery's capability. </p>
 
 
 
 
-			<ul>
+			<ul id="TOC">
 			<li><h3 id="one"><a href="selection/index.html">Selection</a></h3></li>
 			<li><h3 id="two"><a href="animation/index.html">Animation</a></h3></li>
-			<li><h3 id="three"><a href="Ajax/about.html">Ajax</a></h3></li>
+			<li><h3 id="three"><a href="Ajax/about.html">AJAX</a></h3></li>
 			<li><h3 id="four">fill in title</h3></li>
 			<li><h3 id="five">fill in title</h3></li>
 			<li><h3 id="six">fill in title</h3></li>
@@ -37,7 +38,6 @@
 
 
 
-	</div>
 
 </article>
 <script src="index.js"></script>
