added home button to jQuery mobile section

--- a/web-app/jquerymobile/index.html
+++ b/web-app/jquerymobile/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
 </head>
 <body>
 
@@ -90,6 +91,8 @@ which allows for fun and interactive possibilities for all web applications.
 	web applications with clean visuals. They are all optimized for mobile device
 	such as smartphones and tablets, but also look great on Desktop browsers.
 </p>
+
+<a class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" rel="external" href="../index.html">Go Home</a>
 	</div><!-- /content -->
 
 
