--- a/web-app/animation/about.html
+++ b/web-app/animation/about.html
@@ -1,4 +1,39 @@
-<p style="max-width: 50em;
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Animation Demo</title>
+		
+	</head>
+
+
+<body style = "background: #eee;
+  padding: 20px;">
+<article style = "max-width: 50em;
   background: white;
   padding: 2em;
-  margin: 1em auto;">Description: animate() function enables custom animation of a set of CSS properties. Press arrow key to move the image up/down/right/left. We can create many ther effects easily using jQuery such as fadeOut(), fadeIn()..etc. Clicking the image will make the image fade out and then fade in again. Whenever mouse leaves an image, the element will be bounced three times.</p>
+  margin: 1em auto;">
+	<h1>Animation</h1>
+	
+	
+	
+	<div class="all-questions">
+		<p>The jQuery library provides several techniques for adding animation to a web page. These include simple, standard animations that are frequently used, and the ability to craft sophisticated custom effects. We provide several demos that typify how animations work in jQuery</p>
+
+		<p>Animation Demo 1 Description: animate() function enables custom animation of a set of CSS properties. Press arrow key to move the image up/down/right/left. We can create many ther effects easily using jQuery such as fadeOut(), fadeIn()..etc. Clicking the image will make the image fade out and then fade in again. Whenever mouse leaves an image, the element will be bounced three times.</p>
+
+		
+		
+	</div>
+	
+</article>
+
+</body>
+</html>
+
+
+
+
