--- a/web-app/animation/index.html
+++ b/web-app/animation/index.html
@@ -23,9 +23,9 @@
 	<div class="all-questions">
 
 		<ul>
-				<li><a href="about.html">About</a></li>
-				<li><a href="animation.html">Animation Demo1</a></li>
-				<li><a href="animation2.html">Animation Demo2</a></li>
+				<li><h3><a href="about.html">About</a></h3></li>
+				<li><h3><a href="animation.html">Animation Demo1</a></h3></li>
+				<li><h3><a href="animation2.html">Animation Demo2</a></h3></li>
 			
 		</ul>
 
