--- a/web-app/index.html
+++ b/web-app/index.html
@@ -19,7 +19,7 @@
 	<div class="all-questions">
 
 	</div>
-	<p> Below are some of the highlights of JQuery's capability. </p>
+	<p> Below are some of the highlights of JQuery's capability.</p>
 
 
 
@@ -27,7 +27,7 @@
 			<ul id="TOC">
 			<li><h3 id="one"><a href="selection/index.html">Selection</a></h3></li>
 			<li><h3 id="two"><a href="animation/index.html">Animation</a></h3></li>
-			<li><h3 id="three"><a href="Ajax/about.html">AJAX</a></h3></li>
+			<li><h3 id="three"><a href="Ajax/index.html">AJAX</a></h3></li>
 			<li><h3 id="four"><a href="jquerymobile/index.html">JQuery Mobile</a></h3></li>
 			<li><h3 id="five">fill in title</h3></li>
 			<li><h3 id="six">fill in title</h3></li>
