--- a/web-app/selection/selection1.html
+++ b/web-app/selection/selection1.html
@@ -10,16 +10,16 @@
 </head>
 <body>
 <div class = "center" id = "border">
-<p>Here is a list of actions you can perform. addClass() add red class to songs that were green. Cloest() finds the cloest song to where you clicked and change its color to purple. :lt() selector selects the first 4 songs and hide them. .on() allows you to bind multiple events to one selector as you can see from the actions on show button.</p>
+<p>Here is a list of actions you can perform. addClass() add green class to songs that were red. Cloest() finds the cloest song to where you clicked and change its color to purple. :lt() selector selects the first 4 songs and hide them. .on() allows you to bind multiple events to one selector as you can see from the actions on Change Color button.</p>
   <ol>
-    <li>Click the hide button to hide the first 4 songs from the list</li>
-    <li>Click the show button to change red songs to green ones</li>
-    <li>Mouse over the show button to see fadein and fadeout</li>
+    <li>Click the Hide button to hide the first 4 songs from the list</li>
+    <li>Click the Change Color button to change red songs to green ones</li>
+    <li>Mouse over the Change Color button to see fadein and fadeout</li>
     <li>Click any song to change font color to purple</li>
   </ol>
 </div>
-<div class = "center">
-  <ul>
+<div class = "center" >
+  <ol class = "demo">
     <li>Your Star</li>
     <li>Swing, Swing</li>
     <li class = "red">Time Stands Still</li>
@@ -35,12 +35,13 @@
     <li class = "red">Lazuli</li>
     <li>Evaporated</li>
     <li>Touch It / Technologic</li>
-  </ul>
+    <li>Haiti</li>
+  </ol>
   <p class = "text"> There is no green li </p>
 
 
   <button type="button" id="hide">Hide</button>
-  <button type="button" id="show">Show</button>
+  <button type="button" id="changeColor">Change Color</button>
  <div>
 <script src="selection.js"></script>
 </body>
