--- a/web-app/selection/about.html
+++ b/web-app/selection/about.html
@@ -1,4 +1,35 @@
-<p style="max-width: 50em;
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Selection About</title>
+		
+	</head>
+
+
+<body style = "background: #eee;
+  padding: 20px;">
+<article style = "max-width: 50em;
   background: white;
   padding: 2em;
-  margin: 1em auto;">Description:	addClass() add red class to songs that were green. Cloest() finds the cloest song to where you clicked and change its color to purple. :lt() selector selects the first 4 songs and hide them. .on() allows you to bind multiple events to one selector as you can see from the actions on show button.</p>	
+  margin: 1em auto;">
+	<h1>Selection</h1>
+	
+	
+	
+	<div class="all-questions">
+
+		<p>The most basic concept of jQuery is to "select some elements and do something with them." jQuery supports most CSS3 selectors, as well as some non-standard selectors. We handpicked a couple most frequently used jQuery selectors/functions that can prove beneficial in the long run. We also provide several demos that typify how these jQuery selectors are used in conjuction with JavaScript.</p>	
+
+		
+		
+	</div>
+	
+</article>
+
+</body>
+</html>
+
