--- a/web-app/selection/index.html
+++ b/web-app/selection/index.html
@@ -23,9 +23,9 @@
 	<div class="all-questions">
 
 		<ul>
-				<li><a href="about.html">About</a></li>
-				<li><a href="selection1.html">Selection Demo1</a></li>
-				<li><a href="selection2.html">Selection Demo2</a></li>
+				<li><h3><a href="about.html">About</a></h3></li>
+				<li><h3><a href="selection1.html">Selection Demo1</a></h3></li>
+				<li><h3><a href="selection2.html">Selection Demo2</a></h3></li>
 			
 		</ul>
 
