add attributes link, and fix indentation

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -8,38 +8,25 @@
 		<title>jQuery Demo</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
+	<body>
+		<h1 id="jquery_title">JQuery Demo</h1>
+		<h1 id="groupname">Awesome Group</h1>
+		<p id="team">James Araujo, Jay Svoboda, Lin Cong, Twilight Summerland, Hwayoung Lee, Abram Wiebe</p>
+		<article>
+			<h1 id="TOC">Table of Contents</h1>
+			<div class="all-questions">
 
-
-<body>
-	<h1 id="jquery_title">JQuery Demo</h1>
-	<h1 id="groupname">Awesome Group</h1>
-	<p id="team"> James Araujo, Jay Svoboda, Lin Cong, Twilight Summerland, Hwayoung Lee, Abram Wiebe</p>
-<article>
-	<h1 id="TOC">Table of Contents</h1>
-	<div class="all-questions">
-
-	</div>
-	<p> Below are some of the highlights of JQuery's capability.</p>
-
-
-
-
+			</div>
+			<p>Below are some of the highlights of JQuery's capability.</p>
 			<ul id="TOC">
-			<li><h3 id="one"><a href="selection/index.html">Selection</a></h3></li>
-			<li><h3 id="two"><a href="animation/index.html">Animation</a></h3></li>
-			<li><h3 id="three"><a href="Ajax/index.html">AJAX</a></h3></li>
-			<li><h3 id="four"><a href="jquerymobile/index.html">JQuery Mobile</a></h3></li>
-			<li><h3 id="five">fill in title</h3></li>
-			<li><h3 id="six">fill in title</h3></li>
+				<li><h3 id="one"><a href="selection/index.html">Selection</a></h3></li>
+				<li><h3 id="two"><a href="animation/index.html">Animation</a></h3></li>
+				<li><h3 id="three"><a href="Ajax/index.html">AJAX</a></h3></li>
+				<li><h3 id="four"><a href="jquerymobile/index.html">JQuery Mobile</a></h3></li>
+				<li><h3 id="five"><a href="attributes/index.html">Attributes</a></h3></li>
+				<li><h3 id="six">fill in title</h3></li>
 			</ul>
-
-
-
-
-
-
-
-</article>
-<script src="index.js"></script>
-</body>
+		</article>
+		<script src="index.js"></script>
+	</body>
 </html>
