--- a/web-app/attributes/index.html
+++ b/web-app/attributes/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Selection Demo</title>
+		<title>Attributes</title>
 	</head>
 	<body style="background: #eee; padding: 20px;">
 		<article style="max-width: 50em; background: white; padding: 2em; margin: 1em auto;">
