Added nav without correct path to all necessary files, please modify urls

--- a/web-app/ajax/about.html
+++ b/web-app/ajax/about.html
@@ -13,6 +13,12 @@
 			<div class="all-questions">
                 <p>What is ajax?</p>
 			</div>
+			</div>
+	<div id="bottom_nav">
+	<hr>
+	<a href="index.html">Up:Index</a>
+	<a href="selection1.html">Next:Selection Demo</a>
+	</div>
 		</article>
 	</body>
 </html>
