--- a/web-app/ajax/ajaxdemo.html
+++ b/web-app/ajax/ajaxdemo.html
@@ -16,8 +16,15 @@
                 <div><p id="ajax-result"><p></div>
                 <button id="ajax-requestButton">Ajax Request</button>
 			</div>
+			</div>
+	<div id="bottom_nav">
+	<hr>
+	<a href="index.html">Up:Index</a>
+	<a href="selection1.html">Next:Selection Demo</a>
+	</div>
 		</article>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="ajax.js"></script>
+		
 	</body>
 </html>
