--- a/web-app/animation/animation.html
+++ b/web-app/animation/animation.html
@@ -10,5 +10,11 @@
 	</head>
 	<body>
         <img src= "animation_img.png">
+        </div>
+	<div id="bottom_nav">
+	<hr>
+	<a href="index.html">Up:Index</a>
+	<a href="selection1.html">Next:Selection Demo</a>
+	</div>
 	</body>
 </html>
