--- a/web-app/selection/index.html
+++ b/web-app/selection/index.html
@@ -33,6 +33,13 @@
 		
 	</div>
 	
+	</div>
+	<div id="bottom_nav">
+	<hr>
+	<a href="index.html">Up:Index</a>
+	<a href="selection1.html">Next:Selection Demo</a>
+	</div>
+	
 </article>
 
 </body>
