--- a/web-app/ajax/index.1.html
+++ b/web-app/ajax/index.1.html
@@ -16,6 +16,12 @@
 					<li><h3><a href="demo1.html">Attributes Demo1</a></h3></li>
 				</ul>
 			</div>
+			</div>
+	<div id="bottom_nav">
+	<hr>
+	<a href="index.html">Up:Index</a>
+	<a href="selection1.html">Next:Selection Demo</a>
+	</div>
 		</article>
 	</body>
 </html>
