--- a/web-app/animation/about.html
+++ b/web-app/animation/about.html
@@ -28,6 +28,12 @@
 		
 		
 	</div>
+	</div>
+	<div id="bottom_nav">
+	<hr>
+	<a href="index.html">Up:Index</a>
+	<a href="selection1.html">Next:Selection Demo</a>
+	</div>
 	
 </article>
 
