--- a/web-app/selection/about.html
+++ b/web-app/selection/about.html
@@ -27,6 +27,11 @@
 		
 		
 	</div>
+	<div id="bottom_nav">
+	<hr>
+	<a href="index.html">Up:Index</a>
+	<a href="selection1.html">Next:Selection Demo</a>
+	</div>
 	
 </article>
 
