--- a/web-app/selection/index.html
+++ b/web-app/selection/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		
+
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Selection Demo</title>
-		
+
 	</head>
 
 
@@ -17,35 +17,30 @@
   padding: 2em;
   margin: 1em auto;">
 	<h1>Selection</h1>
-	
-	
-	
+
+
+
 	<div class="all-questions">
 
 		<ul>
 				<li><h3><a href="about.html">About</a></h3></li>
 				<li><h3><a href="selection1.html">Selection Demo1</a></h3></li>
 				<li><h3><a href="selection2.html">Selection Demo2</a></h3></li>
-			
+
 		</ul>
 
-		
-		
+
+
 	</div>
-	
+
 	</div>
 	<div id="bottom_nav">
 	<hr>
-	<a href="index.html">Up:Index</a>
+	<a href="../index.html">Up:Index</a>
 	<a href="selection1.html">Next:Selection Demo</a>
 	</div>
-	
+
 </article>
 
 </body>
 </html>
-
-
-
-
-
