Updated bottom for sub indexes

--- a/web-app/selection/index.html
+++ b/web-app/selection/index.html
@@ -36,8 +36,7 @@
 	</div>
 	<div id="bottom_nav">
 	<hr>
-	<a href="index.html">Up:Index</a>
-	<a href="selection1.html">Next:Selection Demo</a>
+	<a href="../index.html">Up:Home</a>
 	</div>
 	
 </article>
