Changed jQuery mobile to black on white

--- a/web-app/jquerymobile/index.html
+++ b/web-app/jquerymobile/index.html
@@ -12,7 +12,7 @@
 <body>
 
 	<!-- Start of first page: #one -->
-<div data-role="page" id="one" data-theme="b">
+<div data-role="page" id="one" data-theme="a">
 
 	<div data-role="header">
 		<h1>So, what exactly is jQuery mobile?</h1>
@@ -25,7 +25,7 @@
 				too easy!
 			</p>
 		</div>
-<div data-role="popup" id="dialog1" data-theme="b" data-dismissible="false">
+<div data-role="popup" id="dialog1" data-theme="a" data-dismissible="false">
 
     <div role="main" class="ui-content">
         <h3> You can also make dialog boxes! </h3>
@@ -99,7 +99,7 @@ which allows for fun and interactive possibilities for all web applications.
 </div><!-- /page one -->
 
 <!-- Start of second page: #two -->
-<div data-role="page" id="two" data-theme="a">
+<div data-role="page" id="two" data-theme="b">
 
 	<div data-role="header">
 		<h1>Another page!</h1>
