--- a/web-app/index.html
+++ b/web-app/index.html
@@ -8,26 +8,34 @@
 		<title>jQuery Demo</title>
 		<link rel="stylesheet" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/bootswatch.css">
 	</head>
 	<body>
 		<h1 id="jquery_title">JQuery Demo</h1>
-		<h1 id="groupname">Awesome Group</h1>
-		<p id="team">James Araujo, Jay Svoboda, Lin Cong, Twilight Summerland, Hwayoung Lee, Abram Wiebe</p>
-		<article>
-			<h1 id="TOC">Table of Contents</h1>
-			<div class="all-questions">
-
-			</div>
-			<p>Below are some of the highlights of JQuery's capability.</p>
-			<ul id="TOC">
-				<li><h3 id="one"><a href="selection/index.html">Selection</a></h3></li>
-				<li><h3 id="two"><a href="animation/index.html">Animation</a></h3></li>
-				<li><h3 id="three"><a href="Ajax/index.html">AJAX</a></h3></li>
-				<li><h3 id="four"><a href="jquerymobile/index.html">JQuery Mobile</a></h3></li>
-				<li><h3 id="five"><a href="attributes/index.html">Attributes</a></h3></li>
-				<li><h3 id="six">fill in title</h3></li>
-			</ul>
-		</article>
+		<h2 id="groupname">Awesome Group</h2>
+		<h3 id="team">James Araujo, Jay Svoboda, Lin Cong, Twilight Summerland, Hwayoung Lee, Abram Wiebe</h3>
+		<nav>
+		<ul class="nav nav-pills">
+			<li class="active"><a href="index.html">Home</a></li>
+			<li><a href="selection/index.html">Selection</a></li>
+			<li><a href="animation/index.html">Animation</a></li>
+			<li><a href="Ajax/index.html">AJAX</a></li>
+			<li><a href="jquerymobile/index.html">JQuery Mobile</a></li>
+			<li><a href="attributes/index.html">Attributes</a></li>
+		</ul>
+		<nav>
+		<div class="jumbotron">
+			<h1>jQuery</h1>
+			<hr>
+		<p class="smaller">jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers. With a combination of versatility and extensibility, jQuery has changed the way that millions of people write JavaScript.</p>
+			<p>This demo site aims to highlight some key features of jQuery including: <em>AJAX</em>, <em>DOM Selection and Manipulation</em> and frameworks such as <em>jQuery Mobile</em></p>
+			
+			<br>
+			<p><a class="btn btn-primary btn-lg f-right" href="https://csil-git1.cs.surrey.sfu.ca/awesomegroup/tech-eval-demo">Access the Git</a>
+			<a class="btn btn-primary btn-lg f-right" href="https://jquery.com">Get jQuery</a></p>
+		</div>
 		<script src="index.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</body>
 </html>
