--- a/web-app/jquerymobile/index.html
+++ b/web-app/jquerymobile/index.html
@@ -8,6 +8,8 @@
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="jquerymobile.css">
+
 </head>
 <body>
 
