add selection demo3

--- a/web-app/selection/selection2.html
+++ b/web-app/selection/selection2.html
@@ -24,9 +24,9 @@
 
               <p>.clone() creates a deep copy of the set of matched elements. The downside of .clone() is that it produces elements with duplicate id attributes, which are supposed to be unique. Click the first image on each row to make clones; click any clone to remove clones:</p>
                 
-              <div><img class="mario" src="mario.png" alt="Mario" width="80" height="100"></div>
-              <div><img class="luigi" src="luigi.png" alt="Luigi" width="80" height="100"></div>
-              <div><img class="princess" src="princess.png" alt="Princess" width="80" height="100"></div>
+              <div><img class="mario" src="img/mario.png" alt="Mario" width="80" height="100"></div>
+              <div><img class="luigi" src="img/luigi.png" alt="Luigi" width="80" height="100"></div>
+              <div><img class="princess" src="img/princess.png" alt="Princess" width="80" height="100"></div>
         </div>
         
     </div>
