--- a/web-app/selection/index.html
+++ b/web-app/selection/index.html
@@ -26,6 +26,7 @@
 				<li><h3><a href="about.html">About</a></h3></li>
 				<li><h3><a href="selection1.html">Selection Demo1</a></h3></li>
 				<li><h3><a href="selection2.html">Selection Demo2</a></h3></li>
+				<li><h3><a href="selection3.html">Selection Demo3</a></h3></li>
 			
 		</ul>
 
