QA selection and animation, still some problems

--- a/web-app/animation/animation.html
+++ b/web-app/animation/animation.html
@@ -9,12 +9,23 @@
 		<script type='text/javascript' src='animation.js'></script>
 	</head>
 	<body>
+	
+	<div>
+	 <p>Animation Demo 1 Description: animate() function enables custom animation of a set of CSS properties.
+   Press arrow key to move the image up/down/right/left.
+   Clicking the image will make the image fade out and then fade in again.
+   Whenever mouse leaves an image, the element will be bounced three times.
+   </p>
+   </div>
+   <div>
+   
         <img src= "animation_img.png">
-        </div>
+    </div>
+    
 	<div id="bottom_nav">
 	<hr>
-	<a href="index.html">Up:Index</a>
-	<a href="selection1.html">Next:Selection Demo</a>
+	<a href="index.html">Up: Index</a>
+	<a href="animation2.html">Next: Carousel Demo</a>
 	</div>
 	</body>
 </html>
