--- a/web-app/animation/animation2.html
+++ b/web-app/animation/animation2.html
@@ -10,16 +10,35 @@
   </head>
   
   <body>
-      <div class="container"> 
-        <div id = "slider">
-          <ul class="slides">
-            <li class="slide"><img src="cat1.jpg"/></li>
-            <li class="slide"><img src="cat2.jpg"/></li>
-            <li class="slide"><img src="cat3.jpg"/></li>
-            <li class="slide"><img src="cat1.jpg"/></li>
-          </ul>
-        </div>
-      </div>
+  
+  <div>
+  
+	  <div>
+   
+	   <p>
+		Animation Demo 2 Description: With animate() and setTimeout() functions, we can easily create an automatic image slider. Every 2 seconds, animate() function moves the image to the left. After we see the last slide, it goes back to the first slide and continues.
+	   </p>
+	  </div>
+  
+  
+	  </div>
+		  <div class="container"> 
+			<div id = "slider">
+			  <ul class="slides">
+				<li class="slide"><img src="cat1.jpg"/></li>
+				<li class="slide"><img src="cat2.jpg"/></li>
+				<li class="slide"><img src="cat3.jpg"/></li>
+				<li class="slide"><img src="cat1.jpg"/></li>
+			  </ul>
+			</div>
+		  </div>
+	
+		<div id="bottom_nav">
+		<hr>
+		<a href="index.html">Up: Home</a>
+		</div>
+	
+	</div>
   </body>
 
 </html>
