--- a/web-app/selection/selection1.html
+++ b/web-app/selection/selection1.html
@@ -6,6 +6,7 @@
 
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <link rel="stylesheet" href="selection.css">
+  <link rel="stylesheet" href="style.css">
   <link rel='stylesheet' type='text/css' href='../style.css'/>
 </head>
 <body>
@@ -42,7 +43,16 @@
 
   <button type="button" id="hide">Hide</button>
   <button type="button" id="changeColor">Change Color</button>
- <div>
+
+ <div id="bottom_nav">
+	<hr>
+	<ul>
+	<li><a href="index.html">Up:Index</a></li>
+	<li><a href="selection2.html">Next:Selection Demo 2: Cloning</a></li>
+	</ul>
+</div>
+ </div>
+
 <script src="selection.js"></script>
 </body>
 </html>
