--- a/web-app/selection/index.html
+++ b/web-app/selection/index.html
@@ -5,28 +5,32 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css"  href="../style.css">
+		<link rel="stylesheet" type="text/css"  href="style.css">
 		<title>Selection Demo</title>
 		
 	</head>
 
 
-<body style = "background: #eee;
-  padding: 20px;">
-<article style = "max-width: 50em;
-  background: white;
-  padding: 2em;
-  margin: 1em auto;">
+<body>
+<article >
 	<h1>Selection</h1>
 	
-	
+	<p><!--The most basic concept of jQuery is to "select some elements and do something with them".
+	 jQuery supports most CSS3 selectors, as well as some non-standard selectors.
+	 
+	 This is plagarism lincong  please alter it
+	 -->
+	 We handpicked a couple most frequently used jQuery selectors/functions to demonstrate the power of jQuery 
+	 Below are several demos that typify how these jQuery selectors are used in conjuction with JavaScript.</p>	
+
 	
 	<div class="all-questions">
 
 		<ul>
-				<li><h3><a href="about.html">About</a></h3></li>
-				<li><h3><a href="selection1.html">Selection Demo1</a></h3></li>
-				<li><h3><a href="selection2.html">Selection Demo2</a></h3></li>
-				<li><h3><a href="selection3.html">Selection Demo3</a></h3></li>
+				<li><h3><a href="selection1.html">Selection Demo 1</a></h3></li>
+				<li><h3><a href="selection2.html">Selection Demo 2</a></h3></li>
+				<li><h3><a href="selection3.html">Selection Demo 3</a></h3></li>
 			
 		</ul>
 
@@ -37,7 +41,7 @@
 	</div>
 	<div id="bottom_nav">
 	<hr>
-	<a href="../index.html">Up:Home</a>
+	<a href="../index.html">Up: Home</a>
 	</div>
 	
 </article>
