--- a/web-app/index.html
+++ b/web-app/index.html
@@ -28,7 +28,8 @@
 		<div class="jumbotron">
 			<h1>jQuery</h1>
 			<hr>
-		<p class="smaller">jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers. With a combination of versatility and extensibility, jQuery has changed the way that millions of people write JavaScript.</p>
+		<div class="smaller"><p>jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers. With a combination of versatility and extensibility, jQuery has changed the way that millions of people write JavaScript.</p>
+		 - <a href="https://jquery.com/">jQuery Mission Statement</a></div>
 			<p>This demo site aims to highlight some key features of jQuery including: <em>AJAX</em>, <em>DOM Selection and Manipulation</em> and frameworks such as <em>jQuery Mobile</em></p>
 			
 			<br>
