Added article borders to selection pages

--- a/web-app/ajax/ajaxdemo.html
+++ b/web-app/ajax/ajaxdemo.html
@@ -57,6 +57,7 @@
 	<a href="selection1.html">Next:Selection Demo</a>
 	</div>
 		</article>
+		<script type="text/javascript" src="ajax.js"></script>
 
 		
 	</body>
