--- a/web-app/selection/selection1.html
+++ b/web-app/selection/selection1.html
@@ -10,6 +10,8 @@
   <link rel='stylesheet' type='text/css' href='../style.css'/>
 </head>
 <body>
+
+<article>
 <div class = "center" id = "border">
 <p>Here is a list of actions you can perform. addClass() add green class to songs that were red. Cloest() finds the cloest song to where you clicked and change its color to purple. :lt() selector selects the first 4 songs and hide them. .on() allows you to bind multiple events to one selector as you can see from the actions on Change Color button.</p>
   <ol>
@@ -52,7 +54,7 @@
 	</ul>
 </div>
  </div>
-
+</article>
 <script src="selection.js"></script>
 </body>
 </html>
