--- a/web-app/selection/selection2.html
+++ b/web-app/selection/selection2.html
@@ -22,6 +22,8 @@
      </head>
     
    <body>
+   
+   <article>
    <div class = "center" id = "border">
         <div>
 
@@ -44,6 +46,7 @@
 		</ul>
 		</div>   
     </div>
+    </article>
 	
         
    </body>
