Main index cleanup

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -15,28 +15,32 @@
 		<h1 id="jquery_title">JQuery Demo</h1>
 		<h2 id="groupname">Awesome Group</h2>
 		<h3 id="team">James Araujo, Jay Svoboda, Lin Cong, Twilight Summerland, Hwayoung Lee, Abram Wiebe</h3>
-		<nav>
-		<ul class="nav nav-pills">
-			<li class="active"><a href="index.html">Home</a></li>
-			<li><a href="selection/index.html">Selection</a></li>
-			<li><a href="animation/index.html">Animation</a></li>
-			<li><a href="Ajax/index.html">AJAX</a></li>
-			<li><a href="jquerymobile/index.html">JQuery Mobile</a></li>
-			<li><a href="attributes/index.html">Attributes</a></li>
-		</ul>
-		<nav>
+		
 		<div class="jumbotron">
 			<h1>jQuery</h1>
 			<hr>
 		<div class="smaller"><p>jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers. With a combination of versatility and extensibility, jQuery has changed the way that millions of people write JavaScript.</p>
 		 - <a href="https://jquery.com/">jQuery Mission Statement</a></div>
 			<p>This demo site aims to highlight some key features of jQuery including: <em>AJAX</em>, <em>DOM Selection and Manipulation</em> and frameworks such as <em>jQuery Mobile</em></p>
-			
+			<p> Choose one of the sections below to see jQuery in action </p> 
+		<nav>
+		<ul class="nav nav-pills">
+			<!--<li class="active"><a href="index.html">Home</a></li>-->
+			<li><a href="selection/index.html">Selection</a></li>
+			<li><a href="animation/index.html">Animation</a></li>
+			<li><a href="Ajax/index.html">AJAX</a></li>
+			<li><a href="jquerymobile/index.html">JQuery Mobile</a></li>
+			<li><a href="attributes/index.html">Attributes</a></li>
+		</ul>
+		</nav>
 			<br>
 			<p><a class="btn btn-primary btn-lg f-right" href="https://csil-git1.cs.surrey.sfu.ca/awesomegroup/tech-eval-demo">Access the Git</a>
 			<a class="btn btn-primary btn-lg f-right" href="https://jquery.com">Get jQuery</a></p>
+			
+		
 		</div>
-		<script src="index.js"></script>
+		
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		
 	</body>
 </html>
